<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <properties>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
    </properties>

    <groupId>org.EricRamirezS</groupId>
    <artifactId>JDA_command4j</artifactId>
    <version>0.0.1</version>
    <packaging>jar</packaging>
    <name>${project.groupId}:${project.artifactId}</name>
    <description> Java library to work with commands on Discord using JDA, it mimics Discord.js-commando </description>

    <licenses>
        <license>
        <name>GPL-3.0</name>
        <url>https://opensource.org/licenses/GPL-3.0</url>
        </license>
    </licenses>

    <developers>
        <developer>
            <name>Eric Ramirez</name>
            <email>eramiresantis@gmail.com</email>
        </developer>
    </developers>

    <scm>
        <connection>scm:git:git://github.com/EricRamirezS/JDA_command4j.git</connection>
        <developerConnection>scm:git:ssh://github.com:EricRamirezS/JDA_command4j.git</developerConnection>
        <url>https://github.com/EricRamirezS/JDA_command4j</url>
    </scm>

    <repositories>
        <repository>
            <id>dv8tion</id>
            <name>m2-dv8tion</name>
            <url>https://m2.dv8tion.net/releases</url>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>net.dv8tion</groupId>
            <artifactId>JDA</artifactId>
            <version>4.3.0_309</version>
        </dependency>
        <dependency>
            <groupId>org.jetbrains</groupId>
            <artifactId>annotations</artifactId>
            <version>22.0.0</version>
        </dependency>
    </dependencies>
</project>